# traffic-monitor

./: .gitignore  README.md  pyproject.toml
src/license_plate_monitor/: __main__.py  main.py
src/license_plate_monitor/ai/: __init__.py  detector.py
src/license_plate_monitor/ui/: __init__.py  gui_app.py  threads.py  widgets.py
src/license_plate_monitor/utils/: __init__.py  youtube.py
src/traffic_monitor/: detector.py  gui_app.py  main.py
src/traffic_monitor/ai/: detector.py
src/traffic_monitor/ui/: gui_app.py  threads.py
src/traffic_monitor/utils/: youtube.py
traffic_monitor/: detector.py
